# vector-search-hw-bench

./: .gitmodules  CMakeLists.txt  README.md  cuvs_ann.cu  install_faiss.sh  install_faiss_cpu_spr.sh  install_faiss_gpu.sh  ivf_cuvs.cu  profile_faiss.cc  profile_hnswlib.cc  run_faiss.cc  run_faiss_cpu.cc  utils.h
amx/: bf.hpp  build.sh  distance.hpp  run_amx.cc  run_amx.sh  utils.h
cpu/: build_cpu_index.sh  build_faiss_cpu.sh  build_gpu_index.sh  run_cpu_index.sh  run_faiss_cpu.sh
cpu_hnsw/: build_faiss_cpu.sh  run_faiss_cpu.cc  run_faiss_cpu.sh  utils.h
gpu/: build_faiss_gpu.sh  build_gpu.sh  build_gpu_index.sh  run_faiss_gpu.cc  run_faiss_gpu.sh  run_gpu_index.sh
src/: build_cpu.sh  build_cpu_index.sh  build_cpu_spr.sh  build_gpu.sh  build_gpu_index.sh  gen_gt.cc  run_cpu.cc  run_cpu_index.sh  run_gen_gt.sh  run_gpu.cc  run_gpu_index.sh  utils.h
